# testudo-bonds

./: .gitignore  ARCHITECTURE.md  BANKRUN_TIME_TRAVEL_GUIDE.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml
.cursor/rules/: solana-dev.mdc
.kiro/: argv.json
.kiro/specs/comprehensive-testing/: design.md  requirements.md
.kiro/steering/: product.md  structure.md  tech.md
clients/js/: .prettierrc.json  README.md  SDK_REFERENCE.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
clients/js/test/: basic-setup.test.ts  basic-setup.ts  basicSetup.ts  increment.test.ts
clients/js/test/bankrun/: claim.test.ts  setup.ts
clients/js/test/helpers/: assertions.ts  keypairs.ts  setup.ts  transactions.ts
clients/js/test/integration/: edge-cases.test.ts  multi-user.test.ts  protocol-flow.test.ts
clients/js/test/security/: account-ownership.test.ts  authorization.test.ts  business-logic.test.ts  pda-validation.test.ts  token-security.test.ts
clients/js/test/unit/: 00-all.test.ts  01-admin.test.ts  02-user.test.ts  03-bond.test.ts  process-claim.test.ts  update-admin.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
docs/: TEST_PLAN.md
idls/: testudo_testudo_bonds.json
path=docs/: TEST_PLAN.md
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  constants.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/utils/: account_utils.rs  calculation_utils.rs  mod.rs  token_utils.rs
scripts/: generate-clients.mjs
