[package]
name = "testudo-testudo-bonds"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "AV5obcm5Yavs4EebSrmonAAy2K83NZZK88gUn77wmK2"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
shank = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.2.1"
thiserror = "2.0.12"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
spl-token-2022 = "9.0.0"
