[package]
name = "testudo-bonds"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "AV5obcm5Yavs4EebSrmonAAy2K83NZZK88gUn77wmK2"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "1.5.7"
shank = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.2.1"
thiserror = "2.0.12"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-system-interface = "1.0.0"
