[package]
name = "testudo-testudo-bonds-client"
version = "0.0.0"
description = "A generated Rust library for the Testudo Bonds program"
repository = "https://github.com/Testudo/testudo-bonds"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = ["dep:anchor-lang"]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
anchor-lang = { version = "0.31.1", optional = true }
borsh = "1.5.7"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_with = { version = "3.14.0", optional = true }
solana-program = "2.3.0"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.3.4"
solana-sdk = "2.3.1"
